{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 32,
  "lineage": "d665e58e-710c-738e-7877-94fe5227562d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c867e5b00e492b2",
            "association_id": "eipassoc-0c9577ac6854723a3",
            "domain": "vpc",
            "id": "eipalloc-02c867e5b00e492b2",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-018afb579323406e7",
            "private_dns": "ip-10-55-1-58.eu-west-3.compute.internal",
            "private_ip": "10.55.1.58",
            "public_dns": "ec2-35-180-216-46.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.216.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:internet-gateway/igw-0a8a15649c5a12975",
            "id": "igw-0a8a15649c5a12975",
            "owner_id": "918947519157",
            "tags": {
              "Name": "app1_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app1_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:918947519157:loadbalancer/app/app1-load-balancer/7164cf6f5af71c44",
            "arn_suffix": "app/app1-load-balancer/7164cf6f5af71c44",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app1-load-balancer-1801336645.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:918947519157:loadbalancer/app/app1-load-balancer/7164cf6f5af71c44",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app1-load-balancer",
            "security_groups": [
              "sg-03dc0895c02378ccc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e12f853c0941691"
              },
              {
                "subnet_id": "subnet-0914bb667caea4e74"
              },
              {
                "subnet_id": "subnet-0d7d58c8a4f5829b8"
              }
            ],
            "subnets": [
              "subnet-01e12f853c0941691",
              "subnet-0914bb667caea4e74",
              "subnet-0d7d58c8a4f5829b8"
            ],
            "tags": {
              "Name": "App1LoadBalancer",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1LoadBalancer",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "vpc_id": "vpc-0d3af153f599647c6",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.app1-sg02-LB01",
            "aws_subnet.public-eu-west-3a",
            "aws_subnet.public-eu-west-3b",
            "aws_subnet.public-eu-west-3c",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:918947519157:listener/app/app1-load-balancer/7164cf6f5af71c44/43613eabc3aa6270",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:918947519157:targetgroup/app1-target-group/9a835b96dc8329af",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:918947519157:listener/app/app1-load-balancer/7164cf6f5af71c44/43613eabc3aa6270",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:918947519157:loadbalancer/app/app1-load-balancer/7164cf6f5af71c44",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app1_alb",
            "aws_lb_target_group.app1_tg",
            "aws_security_group.app1-sg02-LB01",
            "aws_subnet.public-eu-west-3a",
            "aws_subnet.public-eu-west-3b",
            "aws_subnet.public-eu-west-3c",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app1_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:918947519157:targetgroup/app1-target-group/9a835b96dc8329af",
            "arn_suffix": "targetgroup/app1-target-group/9a835b96dc8329af",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:918947519157:targetgroup/app1-target-group/9a835b96dc8329af",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app1-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c867e5b00e492b2",
            "connectivity_type": "public",
            "id": "nat-02827f45b658f1e69",
            "network_interface_id": "eni-018afb579323406e7",
            "private_ip": "10.55.1.58",
            "public_ip": "35.180.216.46",
            "subnet_id": "subnet-0914bb667caea4e74",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:route-table/rtb-0d8cad6c92fff02b6",
            "id": "rtb-0d8cad6c92fff02b6",
            "owner_id": "918947519157",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02827f45b658f1e69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:route-table/rtb-012a7a94e83e45ef4",
            "id": "rtb-012a7a94e83e45ef4",
            "owner_id": "918947519157",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8a15649c5a12975",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea465d8def7b2cf",
            "route_table_id": "rtb-0d8cad6c92fff02b6",
            "subnet_id": "subnet-04674f7534ec0d010"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-3a",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026b57b2e12be2815",
            "route_table_id": "rtb-0d8cad6c92fff02b6",
            "subnet_id": "subnet-00c84d526be76ad0f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-3b",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b25d7a07707c9886",
            "route_table_id": "rtb-0d8cad6c92fff02b6",
            "subnet_id": "subnet-0ae7acd169b2e0d4f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-3c",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c26d999b44e25a99",
            "route_table_id": "rtb-012a7a94e83e45ef4",
            "subnet_id": "subnet-0914bb667caea4e74"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-3a",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4c2d98cc5d723fb",
            "route_table_id": "rtb-012a7a94e83e45ef4",
            "subnet_id": "subnet-01e12f853c0941691"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-3b",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afe54496a0cb2f5e",
            "route_table_id": "rtb-012a7a94e83e45ef4",
            "subnet_id": "subnet-0d7d58c8a4f5829b8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-3c",
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app1-sg01-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:security-group/sg-0c63c0f54c4dc463d",
            "description": "app1-sg01-servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c63c0f54c4dc463d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyEvilBox",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app1-sg01-servers",
            "name_prefix": "",
            "owner_id": "918947519157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-sg01-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1-sg01-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app1-sg02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:security-group/sg-03dc0895c02378ccc",
            "description": "app1-sg02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dc0895c02378ccc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app1-sg02-LB01",
            "name_prefix": "",
            "owner_id": "918947519157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-sg02-LB01",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1-sg02-LB01",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:subnet/subnet-04674f7534ec0d010",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.55.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04674f7534ec0d010",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "918947519157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-3a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-3a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:subnet/subnet-00c84d526be76ad0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.55.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c84d526be76ad0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "918947519157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-3b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-3b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:subnet/subnet-0ae7acd169b2e0d4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.55.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae7acd169b2e0d4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "918947519157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-3c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-3c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:subnet/subnet-0914bb667caea4e74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.55.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0914bb667caea4e74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918947519157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-3a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-3a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:subnet/subnet-01e12f853c0941691",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.55.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e12f853c0941691",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918947519157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-3b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-3b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:subnet/subnet-0d7d58c8a4f5829b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.55.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7d58c8a4f5829b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918947519157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-3c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-3c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-0d3af153f599647c6"
          },
          "dependencies": [
            "aws_vpc.app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:918947519157:vpc/vpc-0d3af153f599647c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.55.0.0/16",
            "default_network_acl_id": "acl-052223935d12daf70",
            "default_route_table_id": "rtb-02118380bc0a91f4f",
            "default_security_group_id": "sg-012d5246f7add9477",
            "dhcp_options_id": "dopt-0558f089d4a71cffb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d3af153f599647c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02118380bc0a91f4f",
            "owner_id": "918947519157",
            "tags": {
              "Name": "app1",
              "Owner": "Chewbacca",
              "Planet": "Mustafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1",
              "Owner": "Chewbacca",
              "Planet": "Mustafar",
              "Service": "application1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}